2012-05-01  6.7.6-9 Cristy  <quetzlzacatenango@image...>
  * EXR images are in the linear RGB colorspace with a gamma of 1.0.

2012-04-29  6.7.6-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.6-8, SVN revision 7705.

2012-04-25  6.7.6-8 Anthony Thyssen <A.Thyssen@griffith...>
  * Gaussian Filter Fixed.
    For some strange reason it was half the width it should be with an
    effective sigma of 0.25 (not 0.5).  This was the real reason "variable
    blur" was not blurring enough.

2012-04-24  6.7.6-8 Cristy  <quetzlzacatenango@image...>
  * Colorspace round-trip unit tests now work for Q32.

2012-04-23  6.7.6-8 Anthony Thyssen <A.Thyssen@griffith...>
  * Added the RobidouxSharp filter (originally defined Dec 2011)
  * Fixed Variable Blur - bad blur area calculation
    Also Gaussian is sampling properly. Substitute the faster Cubic for now.
  * Convert no longer will do an implicit write to a single space image

2012-04-21  6.7.6-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.6-7, SVN revision 7587.

2012-04-21  6.7.6-7 Anthony Thyssen <A.Thyssen@griffith...>
  * Error when doing an implicit (final) write to a single space filename.
    This is typically a failed line continuation and is very common.
    Using an explicit "-write" will let you do this.

2012-04-20  6.7.6-7 Anthony Thyssen <A.Thyssen@griffith...>
  * Allow +-X+-Y as geometry arguments.

2012-04-17  6.7.6-7 Cristy  <quetzlzacatenango@image...>
  * Distinquish grayscale as sRGB not linear RGB.

2012-04-16  6.7.6-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.6-6, SVN revision 7536.

2012-04-11  6.7.6-6 Glenn Randers-Pehrson <glennrp@image...>
  * Always unlock the semaphore before returning from the png codec, either
    by a "return" or png_error(); changed all Magick*Exception() calls
    after setjmp() to png_error() to ensure proper cleanup (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=16883).
